--- a/style.css
+++ b/style.css
@@ -6,25 +6,24 @@ body{
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
 }
-
-header {
+header{
     width: 100%;
     height: 70vh;
     overflow: hidden;
     position: relative;
     object-fit: cover;
-    margin-bottom: 2rem;
+    margin-bottom: 10px;
+
 }
-.header-image {
+.header-image{
     width: 100%;
-    position: absolute;
+position: absolute;
     top: -20vh;
     z-index: -1;
 }
 .header-image img {
     width: 100%;
 }
-
 .nav {
     display: flex;
     justify-content: space-between;
@@ -173,4 +172,37 @@ letter-spacing: 0.7px;
     font-weight: lighter;
     color: rgb(51, 51, 51);
     margin: 0;
+}
+.section-3 {
+    height: 620px;
+    background-color:rgb(255, 251, 247);
+}
+
+.section-3-container {
+    width: 1080px;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section-3-img{
+    width: 40%;
+}
+.section-3-img img{
+    width: 400px;
+}
+
+.section-3-content p {
+    font-size: 2.5rem;
+    font-weight: lighter;
+    margin-bottom: 15px;
+    margin: 0;
+}
+.section-3-download img{
+    width: 40%;
+}
+footer{
+    font-size: smaller;
+    color: grey;
 }
